# dipdup

./: .all-contributorsrc  .bookignore  .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.pytezos  Dockerfile.slim  Makefile  README.md  SUMMARY.md  about_filters.md  aiosignalrcore-0.0.0-py3-none-any.whl  api-engines.md  built-with-dipdup.md  codegen.md  cookiecutter.json  core-concepts.md  demos.py  dipdup.yaml  dipdup.yml  docker-compose.yml  docs.py  dump_references.py  dump_schema.py  examples.md  execution.md  index.html  inject_pyproject.sh  install.py  install.sh  install_dependencies.sh  install_lts.py  mypy.ini  null  overview.md  (+18 more)
.github/: FUNDING.yml
advanced/: README.md  chain-reorgs.md  context-helpers.md  datasources.md  feature-flags.md  handler-context.md  hooks.md  index-factories.md  internal-models.md  mempool-plugin.md  metadata-interface.md  metadata-plugin.md  models.md  query-performance.md  reindexing.md  sql.md  timescaledb.md
advanced-usage/: datasources.md  improving-performance.md
benchmarks/: Makefile  README.md  local_postgres.yaml  oneshot_demo_evm_events.yaml  oneshot_demo_starknet_events.yaml  oneshot_demo_tezos_domains.yaml
cli/: reference.md  run.md  schema-init.md
cli-reference/: README.md  cache-clear.md  config-export.md  dipdup-docker-init.md  dipdup-init.md  dipdup-migrate.md  docker-init.md  hasura-configure.md  init.md  migrate.md  ref.md  run.md  schema-approve.md  schema-export.md  schema-wipe.md  status.md
client-side/: README.md  genql.md
command-line/: README.md  dipdup-hasura-configure.md  dipdup-init.md  dipdup-run.md
config/: contracts.md  database.md  datasources.md  hasura.md  hooks.md  reference.md
config-file-reference/: README.md  contracts.md  database.md  datasources.md  hasura.md  hooks.md  indexes.md  jobs.md  mempool.md  metadata.md  package.md  sentry.md  spec_version.md  templates.md
config-reference/: README.md  advanced.md  contracts.md  database.md  datasources.md  hasura.md  hooks.md  indexes.md  jobs.md  mempool.md  metadata.md  package.md  prometheus.md  ref.md  sentry.md  spec_version.md  templates.md
configuration-file-reference/: big-picture.md  datasources.md  get-started.md  spec_version.md
cookbook/: README.md  caching-models.md  index-factories.md  offchain-data.md  reusing-typename.md  reusing-typenames.md  sync-callbacks.md
cookiecutter/: README.md  cookiecutter.json  root
core-concepts/: README.md
demo-tzbtc/: README.md  pyproject.toml  replay.json
demos/: DO_NOT_EDIT  demo-domains-big-map.json  demo-domains.json  demo-events.json  demo-registrydao-hash.json
demos/demo-big-maps/: Makefile  README.md  dipdup.dev.yml  dipdup.yml  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  replay.json
demos/demo-big-maps/src/demo_big_maps/: demo_big_maps  models.py
demos/demo-big-maps/src/demo_big_maps/handlers/: on_update_expiry_map.py  on_update_records.py
demos/demo-big-maps/src/demo_big_maps/types/: __init__.py
demos/demo-big-maps/src/demo_big_maps/types/name_registry/tezos_big_maps/: store_records_value.py
demos/demo-big-maps/tests/test_demo_big_maps/: test_demo_big_maps.py
demos/demo-head/: Makefile  README.md  dipdup.yml  docker-compose.swarm.yml  docker-compose.yml  pyproject.toml  replay.json
demos/demo-head/src/demo_head/: models.py
demos/demo-head/src/demo_head/handlers/: on_mainnet_head.py
demos/demo-head/src/demo_head/hooks/: on_index_rollback.py  on_restart.py
demos/demo-head/tests/test_demo_head/: test_demo_head.py
deploying/: README.md
deployment/: README.md  backups.md  database-engines.md  docker-compose.md  docker.md  logging.md  monitoring.md  prometheus.md  sentry.md  swarm.md
docs/: .gitignore  0.quickstart-evm.md  0.quickstart-starknet.md  0.quickstart-substrate.md  0.quickstart-tezos.md  0.quickstart.md  11.changelog.md  12.contributing.md  12.faq.md  13.faq.md  13.troubleshooting.md  14.contributing.md  14.contribution.md  14.troubleshooting.md  15.glossary.md  15.license.md  15.opensource.md  15.thanks.md  16.glossary.md  16.thanks.md  404.html  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  Glossary.md  LICENSE  LICENSE.html  LICENSE.md  Makefile  README.md  SUMMARY.md  _curl-spell.md  api-reference.rst  babel.config.js  book.css  book.toml  build-sphinx.sh  cli-reference.html  cli-reference.md  (+27 more)
docs-next/: .gitignore  404.html  CHANGELOG.html  CONTRIBUTING.html  LICENSE.html  Makefile  book.css  book.toml  cli-reference.html  conf.py  config-reference.rst  context-reference.rst  cookiecutter.json  faq.html  index.html  mdbook-cookiecutter  mdbook-summary  print.html  project.json  quickstart.html  searchindex.js  searchindex.json  troubleshooting.html
examples/: README.md  built-with-dipdup.md  demo-projects.md
getting-started/: README.md  core-concepts.md  defining-models.md  implementing-handlers.md  installation.md  preparing-inventory.md  project-structure.md  templates-and-variables.md
src/demo_evm_events/: .dockerignore  .gitignore  Makefile  README.md  dipdup.yaml  models.py  pyproject.toml  replay.json  replay.yaml
src/demo_evm_events/config/: compose.default.env  dev.default.env  swarm.default.env  swarm.yml
src/demo_evm_events/configs/: dipdup.compose.yaml  dipdup.sqlite.yaml  dipdup.swarm.yaml  replay.yaml
src/demo_evm_events/deploy/: .default.env  .env.default  Dockerfile  compose.default.env  compose.sqlite.yaml  compose.swarm.yaml  compose.yaml  sqlite.compose.yaml  sqlite.default.env  sqlite.env.default  swarm.compose.yaml  swarm.default.env  swarm.env.default
src/demo_evm_events/handlers/: on_transfer.py
src/demo_evm_events/hooks/: on_index_rollback.py
src/demo_evm_events/models/: __init__.py
src/demo_evm_events/schemas/eth_usdt/evm_events/: Transfer.json
src/demo_evm_events/types/eth_usdt/evm_events/: transfer.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dipdup.dev.yml  dipdup.prod.yml  dipdup.yml  docker-compose.yml  mypy.ini  pyproject.toml
(+3946 files in other folders)
