[tool.poetry]
name = "demo-big-maps"
version = "0.0.1"
description = "My shiny new indexer based on DipDup"
license = "MIT"
authors = [
    "John Smith <john_smith@localhost.lan>"
]
readme = "README.md"
packages = [
    { include = "demo_big_maps", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^6"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"