[tool.poetry]
name = "demo-head"
version = "0.0.1"
description = "My shiny new indexer based on DipDup"
license = "MIT"
authors = [
    "John Smith <john_smith@localhost.lan>"
]
readme = "README.md"
packages = [
    { include = "demo_head", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dipdup = "^6"

[tool.poetry.group.dev.dependencies]
black = "*"
flakeheaven = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

[tool.flakeheaven]
max_line_length = 120

[tool.flakeheaven.plugins]
"*" = ["+*"]
pycodestyle = ["-*"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "ruamel"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"